# smash

./: .gitignore  CODE.md  README.md  STORY_CHECKLIST.md  TASKS.md  TODO.md  pyproject.toml  setup.cfg  setup.py
content/: README.md  TODO.md  questions.txt  suggestions.md  to_be_created.md
content/code.md/: 100_docstring.md
content/files/: header.md  smashlet.py
content/readme_parts/: 02_motivation.md  07_helpers.md  08_logging.md  09_comparison.md  100_intro.md  11_architecture.md  120_how_it_works.md  130_basic_usage.md  150_context.md  190_contributing.md  210_license.md  smashlet.py
content/signatures/: header.md  smashlet.py
content/tasks/: replace_print_with_log.md  status_command.md
content/todo/: smashlet.py  to_be_created.md
docs/: CODE.md  FILES.md  GUIDE_README.md  README.md  STORY_CHECKLIST.md  TODO.md  signatures.md
examples/helperfunctions/: smash.py
scripts/: add_file_header.py  clean.sh  publish.sh  publish_test.sh
smash/: __init__.py  cli.py  commands.py  project.py  smashlets.py
smash_core/: __init__.py  cli.py  commands.py  context_loader.py  files.py  helpers.py  log.py  project.py  smashlets.py
smash_core/commands/: __init__.py  add.py  build.py  init.py  status.py
tests/unit/: test_commands.py  test_files.py  test_log.py  test_project.py  test_public_api.py  test_should_run_behavior.py  test_smashlets.py  test_status.py
todo/: smashlet.py  to_be_created.md
todo/tasks/: add_default_helpers.md  add_smashlet_command.md  basic_test_suite.md  explicit_output_tracking.md  inject_inputs_in_context.md  tests_cli.md  (+1 more)
(+17 files in other folders)
