[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smash-cli"
version = "0.1.0"
description = "A lightweight build system for content"
authors = [
  { name="Oskar Nyqvist", email="-@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
smash = "smash.cli:main"

[tool.setuptools]
packages = ["smash"]
